Support Java version 8